apps/prometheus/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: prometheus-ingress-ext
  namespace: prometheus
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`prometheus.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`alertmanager.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
    - match: Host(`grafana.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
