apps/prometheus/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.sobrinho.pt`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
    - match: Host(`alertmanager.sobrinho.pt`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
    - match: Host(`grafana.sobrinho.pt`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
